# example_project_Ruxton

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_func.py
